# Trading_Algo

./: .dockerignore  .env  .gitattributes  .gitignore  .gitignore.bak  Dockerfile  README.md  commands1.txt  deploy.py  docker-compose.yml  pyproject.toml  requirements.txt  script2.sh  state.db
backups/db/: live_20260328_113513.sql  live_20260328_113556.sql  live_20260328_121740.sql  live_20260328_143920.sql  live_20260329_104843.sql  paper_20260328_113556.sql  paper_20260328_121740.sql  paper_20260329_211725.sql
config/: default.yml  india.yml  live.yml  paper.yml  prod.yml  production_example.yaml
dashboard/: index.html  server.py  start.sh
docs/: Chat_starting.txt  Claude_char_recovery_text.txt  Notes  Project_Plan.docx  Project_Plan_Tracker.xlsx  Project_Plan_Tracker_v2.xlsx  Project_Plan_Tracker_v2_UPDATED.xlsx  Project_context.md  TradingBot_Checklist.xlsx  TradingBot_ProjectPlan.docx  ai_agent_production_architecture.html  architecture.md  audit_report.md  deployment.md  full_project_documentation.html  full_project_timeline_and_strategies.html  production_sprint_timeline.html  state.db_Bkp_21Mar2026
docs/ChatGPT_Files/: 🟢 All_Stages of phases.docx
monitoring/: prometheus.yml
scripts/: analyze_paper_trades.py  backup_and_clean_db.py  check_db.py  check_lag.py  check_signals.py  emergency_exit.py  generate_full_docs.py  generate_project_plan.py  live_preflight.py  migrate_add_protection_order_ids.py  run_bot.py  run_paper.ps1  run_prod.ps1  setup_postgres.sql  state.db  test_candles.py  test_fetch_robust.py  test_websocket.py  verify_db.py
(+75 files in other folders)
